tests/testfiles/passing/invalid_identifiers/keyword_as_id_register.c
/* Keyword as identifier: register */
int main() {
    int register;
    register = 23;
}